# tools-iuc

./: .autoupdate_skip  .gitignore  .gitmodules  .hgignore  .hgtags  .shed.yml  .travis.yml  .tt_biocontainer_skip  .tt_blacklist  .tt_index  .tt_py3_skip  .tt_skip  2nd_run.xmfa  2nd_run.xmfa.backbone  2nd_run.xmfa.bbcols  2nd_run_links.txt  Bed12ToBed6.xml  BedToBam.xml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  GitHub_test.py  INSTALL.py  Inc18.fsa  LICENSE  Mutation.py  New_Mut.py  README.md  README.rst  Rep1.fsa  Rep2.fsa  RepL.fsa  Test  Test.py  all.fsa  aminoglycoside.fsa  annotateBed.xml  autoupdate_pr_text.py  bamToBed.xml  bamToFastq.xml  (+157 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  styler.R
.stats/: .~lock.README.md#  README.md  pyproject.toml  summary.txt  tool_events.csv  tool_events.json
.stats/scripts/: data_model.py  discovery.py  git_analyzer.py  main.py  output.py  plots.py  version_resolver.py
Confs/: ticks.conf
Scripts/: New_Mut.py
Templates/: template.conf
abyss/: abyss_wrapper.sh  suite_config.xml
campylobacter/: 23S.fsa  cmeA.fsa  cmeB.fsa  cmeR.fsa  genes.txt  resistens-overview.txt  rpsL.fsa
circgraph/: .class2.py.swp  __init__.py  circos-class.py  class2.py
data_manager/: data_manager_gemini_download.py  data_manager_gemini_download.xml  data_manager_snpEff_databases.py  data_manager_snpEff_databases.xml  data_manager_snpEff_download.py  data_manager_snpEff_download.xml
deprecated/: README.md
docs/: guide_for_reviewers.md  guide_for_tool_updates.md  tool_and_toolpane_guidelines.md
enterococcus_faecalis/: genes.txt  (+3 more)
(+27500 files in other folders)
