[project]
name = "tools-iuc-stats"
version = "0.1.0"
description = "Galaxy Toolshed deployment statistics for tools-iuc"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
]

[project.scripts]
tools-iuc-stats = "scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.metadata]
allow-direct-references = true
